# workflow

./: .travis.yml  stack.yaml  zift.hs
test_resources/: .wfrc
test_resources/reminders/: temp.header  test.header  test.txt
test_resources/workflow/: control-pannel.org  inbox.org  periodicals.org  review.org  someday-maybe.org
test_resources/workflow/projects/: acc.org  acm.org  blog.org  cleaning.org  corilla.org  csk.org  cv.org  doctorate.org  esmol.org  exercise.org  fmfp.org  grill.org  hsbc.org  jobhunt.org  knees.org  neck.org  nick.org  noNext.org  phone.org  repay.org  residence-permit.org  tax-recovery.org  test.org  thanks.org  thesis.org  validity.org  zifter.org
workflow/: .iAmAHiddenFile.org  workflow.cabal
workflow/app/: Main.hs
workflow/src/: Import.hs  Workflow.hs
workflow/src/Workflow/: Next.hs  OptParse.hs  OptParse.hs.orig  Reminders.hs  Reminders.hs.orig  Types.hs  Utils.hs  Waiting.hs
workflow/src/Workflow/OptParse/: Types.hs  Types.hs.orig
workflow/test/: WorkflowSpec.hs
