name: workflow
version: 0.0.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright: Copyright: (c) 2017 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: http://cs-syd.eu
category: CsSyd
author: Tom Sydney Kerckhove and Nick Van den Broeck

library
    exposed-modules:
        Workflow
        Workflow.Types
        Workflow.OptParse
        Workflow.OptParse.Types
        Import
    build-depends:
        base >=4.9 && <=5,
        introduction -any,
        optparse-applicative -any,
        orgmode-parse >=0.1,
        time >=1.6,
        text >=1.2,
        filepath >=1.4,
        configurator >=0.2,
        path >=0.3,
        path-io >=1.2,
        text-time >=0.2,
        bytestring -any
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: src/
    ghc-options: -Wall

executable wf
    main-is: Main.hs
    build-depends:
        base >=4.9 && <=5,
        workflow -any
    default-language: Haskell2010
    hs-source-dirs: app/
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite workflow-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base >=4.9 && <=5,
        workflow -any,
        hspec -any
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: test/
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
